--- a/locale/en.json
+++ b/locale/en.json
@@ -5,6 +5,7 @@
     "uptime": "Uptime",
     "links": "Links",
     "clients": "Clients",
+    "localClients": "Clients in the local mesh cloud",
     "distance": "Distance",
     "connectionType": "Connection type",
     "tq": "Transmit quality",
