Added uplink node example to about page

--- a/locale/cz.json
+++ b/locale/cz.json
@@ -53,6 +53,7 @@
     "nodeNew": "nodeNew",
     "nodeOnline": "Uzel je online",
     "nodeOffline": "Uzel je offline",
+    "nodeUplink": "Uplink",
     "aboutInfo": "aboutInfo",
     "actual": "aktuální",
     "stats": "Statistika",
