--- a/locale/de.json
+++ b/locale/de.json
@@ -50,6 +50,7 @@
     "nodeNew": "neu",
     "nodeOnline": "online",
     "nodeOffline": "offline",
+    "nodeUplink": "uplink",
     "aboutInfo": "<h2>Über Meshviewer</h2><p>Mit Doppelklick kann man in die Karte hinein zoomen und Shift+Doppelklick heraus zoomen.</p>",
     "actual": "Aktuell",
     "stats": "Statistiken",
