fix: firstseen now respects locale and shows a past time

--- a/public/locale/de.json
+++ b/public/locale/de.json
@@ -87,9 +87,9 @@
       "d": "einem Tag",
       "dd": "%d Tagen",
       "M": "einem Monat",
-      "MM": "%d Monate",
+      "MM": "%d Monaten",
       "y": "einem Jahr",
-      "yy": "%d Jahre"
+      "yy": "%d Jahren"
     }
   },
   "yes": "ja",
