feat: Add node.owner filter; make "contact" clickable

--- a/public/locale/cz.json
+++ b/public/locale/cz.json
@@ -21,6 +21,7 @@
     "visible": "Visible on the map",
     "update": "Automatický update",
     "domain": "Domain",
+    "owner": "Kontakt",
     "gateway": "Brána",
     "coordinates": "Souřadnice",
     "contact": "Kontakt",
