--- a/public/locale/de.json
+++ b/public/locale/de.json
@@ -21,6 +21,7 @@
     "visible": "Auf der Karte sichtbar",
     "update": "Auto-Update",
     "domain": "Domain",
+    "owner": "Kontakt",
     "gateway": "Gateway",
     "coordinates": "Koordinaten",
     "contact": "Kontakt",
