--- a/public/locale/fr.json
+++ b/public/locale/fr.json
@@ -21,6 +21,7 @@
     "visible": "Visible sur la carte",
     "update": "Mise à jour automatique",
     "domain": "Domain",
+    "owner": "Contact",
     "gateway": "Passerelle",
     "coordinates": "Coordonnées",
     "contact": "Contact",
