--- a/public/locale/tr.json
+++ b/public/locale/tr.json
@@ -21,6 +21,7 @@
     "visible": "Harita üzerinde görünür",
     "update": "Otomatik güncelleme",
     "domain": "Domain",
+    "owner": "İlişki",
     "gateway": "Geçit",
     "coordinates": "Koordinatlar",
     "contact": "İlişki",
