--- a/public/locale/ru.json
+++ b/public/locale/ru.json
@@ -21,6 +21,7 @@
     "visible": "Видно на карте",
     "update": "Автообновление",
     "domain": "Сайт",
+    "owner": "Контакты",
     "gateway": "Шлюз",
     "coordinates": "Координаты",
     "contact": "Контакты",
